# crystal-launcher

./: .cache_ggshield  .dockerignore  .env.example  .flutter-plugins-dependencies  .gitignore  .gitmodules  ADMIN_MASTER_PLAN.md  AGENTS.md  Inventory Management Deluxe-1.21.1-NeoForge-1.0.3.jar.base64  LICENSE  README.md  TODO.md  TODO_DISCORD_BOT.md  balm-neoforge-1.21.1-21.0.55.jar.base64  batch_identified.json  batch_unidentified.json  betterbeacons_base64.txt  build-installer.ps1  build-launcher.ps1  build-uninstaller.ps1  build.ps1  build_log.txt  cloudbuild.backend.yaml  cloudbuild.bot.yaml  cloudbuild.frontend.yaml  crystaltides_api.json  docker-compose.yml  final_missing.json  grieflogger-1.2.9-1.21.1-neoforge.jar.base64  holdmyitemsnf-1.21.1v2.1.jar.base64  identified_mods.json  identify_missing.ps1  insert_mods.sql  installer.iss  missing_mods.json  package-lock.json  package.json  pubspec.yaml  rebuild_all.ps1  rebuild_all_v2.ps1  (+10 more)
bootstrapper/: Cargo.toml  build.rs
client/: Dockerfile  convert_skin.cjs  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
docs/: ARCHITECTURE.md  CI_CD.md  CODE_QUALITY.md  CRYSTAL_BRIDGE.md  FORUM_SYSTEM.md  FRONTEND_ARCHITECTURE.md  GACHA_SYSTEM.md  GCP_DEPLOYMENT.md  GOOGLE_INTEGRATION.md  README.md  STAFF_HUB.md  USER_PROFILES.md  reorganize-docs.ps1
installer/: pubspec.yaml
lib/: main.dart  main.dart.bak  main.dart.minimal  native_bridge.dart
native/: Cargo.toml  build.rs  generate_icons.ps1
native/src/: java_manager.rs  lib.rs  r2_sync.rs
native/ui/: appwindow.slint
server/: Dockerfile  (+9 more)
(+850 files in other folders)
