[package]
name = "crystal_native"
version = "1.1.9"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "CrystalLite"
path = "src/bin/lite.rs"




[dependencies]

slint = "1.9"
tokio = { version = "1.42", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "0.6.6"  # Added for zip extraction
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls", "stream"] }
walkdir = "2.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "2.0"

# AWS S3 SDK for R2 operations
aws-sdk-s3 = "1.70"
aws-config = "1.5"
aws-credential-types = "1.2"
futures = "0.3"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[build-dependencies]
winres = "0.1"
slint-build = "1.9"
